<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonDB"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_check_list"
        app:layout_constraintBottom_toBottomOf="@+id/buttonQR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonQR"
        android:background="@drawable/round_button_darker" />

    <Button
        android:id="@+id/buttonQR"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/button_qr_code"
        app:layout_constraintBottom_toTopOf="@+id/buttonList"
        app:layout_constraintEnd_toStartOf="@+id/buttonDB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/round_button_darker" />

    <Button
        android:id="@+id/buttonList"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/button_recycle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonHow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/round_button_darker" />

    <Button
        android:id="@+id/buttonHow"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonList"
        app:layout_constraintTop_toTopOf="@+id/buttonList"
        android:background="@drawable/round_button_darker" />

</androidx.constraintlayout.widget.ConstraintLayout>